--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,13 +1,14 @@
-batch_size: 128
-epochs: 80
-lr: 0.001
 
-device: cuda:0
+#batch_size: 128
+batch_size: 256
+epochs: 10
+lr: 0.001
+device: cuda:1
 num_workers: 4
 seed: 1234
 use_wandb: False
 
-data_dir: data
+data_dir: /disks/qnap3/users/24-kosaku/24-Kosaku/dl/2024_kosaku_dl/data
 
-# Evaluation
+ #Evaluation
 model_path: 
